--- a/src/templates/detail-template.handlebars
+++ b/src/templates/detail-template.handlebars
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="sidebar">
         <figure style="background-image: url('{{ coverimage }}');"></figure>
-        <span id="print"><i class="icon-print"></i> Printen</span>
-        <span id="email"><i class="icon-email"></i> E-mailen </span>
+        <a href=""><span id="print"><i class="icon-print"></i> Printen</span></a>
+        <a href=""><span id="email"><i class="icon-email"></i> E-mail</span></a>
     </div>
 
     <div class="maincontent">
