--- a/src/styles/_print.scss
+++ b/src/styles/_print.scss
@@ -1,3 +1,52 @@
 @media print {
-    
+    body {
+        background: #fff;
+    }
+    header {
+        padding: 0 !important;
+    }
+    h1, p {
+        color: #000 !important;
+        text-shadow: none !important;
+    }
+    .book {
+        width: 40% !important;
+        height: 200px;
+    }
+    figure {
+        margin: 0 !important;
+        left: 0 !important;
+    }
+
+    .swipe {
+        display: none !important;
+    }
+    .overview {
+        .icon-container {
+            display: none !important;
+        }
+
+        figure {
+            display: none !important;
+        }
+
+        .overlay {
+            display: none !important;
+        }
+    }
+    .print {
+        img {
+            width: 30%;
+            height: auto;
+            float: left;
+            margin-right: 20px;
+        }
+        .title {
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+        .author {
+            margin-bottom: 10px;
+        }
+    }
 }
