--- a/src/templates/overview-template.handlebars
+++ b/src/templates/overview-template.handlebars
@@ -5,5 +5,11 @@
             <div class="title">{{ title }}</div>
             <div class="delete"></div>
         </figure>
+        <div class="print">
+            <img src="{{ coverimage }}" alt="" />
+            <div class="title">{{ title }}</div>
+            <div class="author"><strong>Auteur</strong> {{ author }}</div>
+            <div class="genre"><strong>Genre</strong> {{ genres }}</div>
+        </div>
     </div>
 {{/each}}
