--- a/src/styles/_print.scss
+++ b/src/styles/_print.scss
@@ -35,6 +35,8 @@
         }
     }
     .print {
+        display: block;
+        
         img {
             width: 30%;
             height: auto;
