--- a/src/styles/_step2.scss
+++ b/src/styles/_step2.scss
@@ -11,18 +11,20 @@
             float: left;
         }
 
-        .back {
-            width:90px;
+        .icon-container {
+            background:rgba ($color-white, 0.5);
+            padding:5px;
+            border:1px solid darken($color-blue, 20);
+            border-radius:5px;
             float: right;
-            margin: 6px 0 0 0;
+            margin:  0 0 0;
 
             img {
+                padding:0 10px;
                 float: right;
-                width: 22px;
-                height: 22px;
+                width: 38px;
+                height: 33px;
             }
-
-
         }
     }
 
