--- a/src/styles/_step2.scss
+++ b/src/styles/_step2.scss
@@ -12,12 +12,10 @@
         }
 
         .icon-container {
-            background:rgba ($color-white, 0.5);
-            padding:5px;
-            border:1px solid darken($color-blue, 20);
-            border-radius:5px;
             float: right;
-            margin:  0 0 0;
+            padding: 5px;
+            border: 1px solid rgba($color-white, 80);
+            border-radius: $border-radius;
 
             img {
                 padding:0 10px;
@@ -48,6 +46,7 @@
                     z-index: -1;
                     padding: 20px;
                     height: 100%;
+                    width: 100%;
                     font-size: 22px;
                     line-height: 1.8;
                     color: $color-white;
