--- a/src/styles/_step2.scss
+++ b/src/styles/_step2.scss
@@ -16,6 +16,7 @@
             padding: 5px;
             border: 1px solid rgba($color-white, 80);
             border-radius: $border-radius;
+            margin: -6px 0 0 0;
 
             img {
                 padding:0 10px;
