--- a/src/templates/overview-template.handlebars
+++ b/src/templates/overview-template.handlebars
@@ -3,7 +3,7 @@
         <figure data-index="{{ @key }}">
             <img src="{{ coverimage }}" alt="" />
             <div class="title">{{ title }}</div>
-            <div class="delete"></div>
+            <div class="delete"> <img src="img/icon-close.svg" alt="X" class="delete-image"> </div>
         </figure>
         <div class="print">
             <img src="{{ coverimage }}" alt="" />
