--- a/src/styles/_step2.scss
+++ b/src/styles/_step2.scss
@@ -57,22 +57,25 @@
 
                 .delete {
                     border:1px solid $color-blue;
-                    background:rgba($color-blue, 0.4);
-                    padding:10px;
-                    border-radius:50%;
+                   // background:rgba($color-blue, 1);
+                    background: linear-gradient(to right, rgba(247,49,49,1) 0%, rgba(255,0,255,1) 19%, rgba(0,0,255,1) 34%, rgba(0,255,242,1) 53%, rgba(0,255,0,1) 66%, rgba(255,234,0,1) 87%, rgba(255,0,0,1) 100%);
+
+                    padding:7px;
                     position:absolute;
-                    width:42px;
-                    height:42px;
-                    bottom:7px;
-                    right:7px;
+                    border-bottom-left-radius: $border-radius;
+                    width:36px;
+                    height:36px;
+                    top:0;
+                    right:0;
                     z-index:999;
+                    box-shadow: -2px 2px 4px rgba($color-black, 0.3);
 
                     img {
                         position:relative;
                         left:0;
                         top:0;
-                        min-width: 16px !important;
-                        min-height: 16px !important;
+                        min-width: 13px !important;
+                        min-height: 13px !important;
                     }
 
                 }
