--- a/src/styles/_step2.scss
+++ b/src/styles/_step2.scss
@@ -39,6 +39,8 @@
                     height: auto;
                     min-width: $book-w;
                     min-height: $book-h;
+                    max-height:$book-h;
+                    max-width: $book-w;
                 }
 
                 .title {
@@ -56,17 +58,18 @@
                 }
 
                 .delete {
-                    border:1px solid $color-blue;
-                   // background:rgba($color-blue, 1);
-                    background: linear-gradient(to right, rgba(247,49,49,1) 0%, rgba(255,0,255,1) 19%, rgba(0,0,255,1) 34%, rgba(0,255,242,1) 53%, rgba(0,255,0,1) 66%, rgba(255,234,0,1) 87%, rgba(255,0,0,1) 100%);
-
+                    border:1px solid orange;
+                    background:orange;
                     padding:7px;
                     position:absolute;
-                    border-bottom-left-radius: $border-radius;
+                    border-radius:50%;
+                    //border-bottom-left-radius: $border-radius;
                     width:36px;
                     height:36px;
-                    top:0;
-                    right:0;
+                    //top:0;
+                    //right:0;
+                    top:-10px;
+                    right:-10px;
                     z-index:999;
                     box-shadow: -2px 2px 4px rgba($color-black, 0.3);
 
@@ -89,7 +92,6 @@
                 left: 50%;
                 margin-left: -($book-w/2);
 
-                overflow: hidden;
 
                 // Insert book edge
                 @include book-edge();
