--- a/src/styles/_print.scss
+++ b/src/styles/_print.scss
@@ -5,6 +5,14 @@
     header {
         padding: 0 !important;
     }
+    .container {
+        margin: 0;
+    }
+    h1 {
+        strong {
+            font-weight: inherit !important;
+        }
+    }
     h1, p {
         color: #000 !important;
         text-shadow: none !important;
@@ -36,12 +44,23 @@
     }
     .print {
         display: block;
-        
-        img {
+
+        .img {
             width: 30%;
+            float: left;
+        }
+        img {
+            width: 100%;
             height: auto;
             float: left;
             margin-right: 20px;
+            background: #eee;
+            border-radius: 5px;
+        }
+        .content {
+            width: 70%;
+            float: left;
+            padding-left: 10px;
         }
         .title {
             font-weight: bold;
