--- a/src/templates/email-template.handlebars
+++ b/src/templates/email-template.handlebars
@@ -1,4 +1,5 @@
 <div class="email-popup">
+    <div class="close"></div>
     <h1>Lijstje sturen via e-mail</h1>
     <form>
         <input type="email" name="email" placeholder="E-mailadres" autocomplete="off" autofocus />
