--- a/src/styles/_step2.scss
+++ b/src/styles/_step2.scss
@@ -261,3 +261,25 @@
         font-weight: bold;
     }
 }
+
+
+@media screen and (min-width:320px) and (max-width:900px){
+    .overview {
+        header {
+            padding:0;
+            margin-bottom:30px;
+
+            h1 {
+                text-align:center;
+                float:none;
+                margin-bottom:15px;
+            }
+
+            .icon-container {
+                float:none;
+                position:absolute;
+            }
+        }
+    }
+
+}
