--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -61,7 +61,7 @@ header {
 
     p {
         color: $color-white;
-        padding-top: 10px;
+        padding: 10px 20px 0;
         text-shadow: 1px 1px 1.5px rgba($color-black, 0.15);
     }
 }
