--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -24,6 +24,24 @@
         }
     }
 }
+@media only screen and (max-width: 800px) {
+    .swipe {
+        .controls {
+            span {
+                &#dislike {
+                    float: left;
+                    margin: 0;
+
+                }
+
+                &#like {
+                    float: right;
+                    margin: 0 0 0 210px;
+                }
+            }
+        }
+    }
+}
 @media only screen and (max-width: 720px) {
     .overview main .book {
         width: 50%;
@@ -58,6 +76,11 @@
             span {
                 width: 70px;
                 height: 70px;
+
+                &#like {
+                    float: right;
+                    margin: 0 0 0 170px;
+                }
             }
         }
     }
