--- a/src/styles/_step2.scss
+++ b/src/styles/_step2.scss
@@ -262,12 +262,12 @@
     }
 }
 
-
-@media screen and (min-width:320px) and (max-width:900px){
+//GREATER THAN 320 AND SMALLER THAN 900
+@media screen and (min-width:320px) and (max-width:501px){
     .overview {
         header {
             padding:0;
-            margin-bottom:30px;
+            margin-bottom:50px;
 
             h1 {
                 text-align:center;
@@ -278,8 +278,24 @@
             .icon-container {
                 float:none;
                 position:absolute;
+                margin:0;
             }
         }
     }
+
+}
+//GREATER THAN 501 AND SMALLER THAN 570
+@media screen and (min-width:501px) and (max-width:570px){
+
+}
+
+
+//GREATER THAN 570 AND SMALLER THAN 720
+@media screen and (min-width:570px) and (max-width:720px){
+
+}
+
+//GREATER THAN 720 AND SMALLER THAN 720
+@media screen and (min-width:720px) and (max-width:980px){
 
 }
