--- a/src/templates/overview-template.handlebars
+++ b/src/templates/overview-template.handlebars
@@ -3,7 +3,9 @@
         <figure data-index="{{ @key }}">
             <img src="{{ coverimage }}" alt="" />
             <div class="title">{{ title }}</div>
-            <div class="delete"> <img src="img/icon-refresh.svg" alt="X" class="delete-image"> </div>
+            <div class="delete">
+                <img src="img/icon-refresh.svg" alt="X" class="delete-image">
+            </div>
         </figure>
         <div class="print">
             <div class="img">
