--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -1,6 +1,5 @@
 @media only screen and (max-width: 980px) {
     body {
-        overflow: visible;
         overflow-x: hidden;
     }
     .overview main {
@@ -58,6 +57,22 @@
 @media only screen and (max-width: 720px) {
     .overview main .book {
         width: 50%;
+    }
+}
+@media only screen and (max-width: 580px) {
+    .overview {
+        header {
+            h1 {
+                float: none;
+                text-align: center;
+            }
+            .icon-container {
+                float: none;
+                display: block;
+                width: 144px;
+                margin: 20px auto 0 auto;
+            }
+        }
     }
 }
 @media only screen and (max-width: 500px) {
@@ -142,104 +157,104 @@
         }
     }
 }
-// And now: duust media queries from Wesley
-@media screen and (min-width:320px) and (max-width:501px){
-    .overview {
-        header {
-            padding:0;
-            margin-bottom:50px;
-
-            h1 {
-
-                text-align:center;
-                float:none;
-                margin-bottom:15px;
-            }
-
-            .icon-container {
-                float:none;
-                position: absolute;
-                left:33%;
-            }
-        }
-    }
-
-}
-@media screen and (min-width:501px) and (max-width:569px){
-    .overview {
-        header {
-            padding:0;
-            margin-bottom:50px;
-
-            h1 {
-
-                text-align:center;
-                float:none;
-                margin-bottom:15px;
-            }
-
-            .icon-container {
-                float:none;
-                position: absolute;
-                left:33.3%;
-            }
-        }
-    }
-}
-@media screen and (min-width:570px) and (max-width:626px){
-    .overview {
-        header {
-            padding:0;
-            margin-bottom:50px;
-
-            h1 {
-                float:left;
-                margin-left:5%;
-            }
-
-            .icon-container {
-                float:right;
-                margin-right:5%;
-
-            }
-        }
-    }
-}
-@media screen and (min-width:627px) and (max-width:720px){
-    .overview {
-        header {
-            padding:0;
-            margin-bottom:50px;
-
-            h1 {
-                float:left;
-                margin-left:7%;
-            }
-
-            .icon-container {
-                float:right;
-                margin-right:7%;
-
-            }
-        }
-    }
-}
-@media screen and (min-width:720px) and (max-width:980px){
-    .overview {
-        header {
-            padding:0;
-            margin-bottom:50px;
-
-            h1 {
-                float:left;
-                margin-left:3.5%;
-            }
-
-            .icon-container {
-                float:right;
-                margin-right:3.5%;
-
-            }
-        }
-    }
-}
+//// And now: duust media queries from Wesley
+//@media screen and (min-width:320px) and (max-width:501px){
+//    .overview {
+//        header {
+//            padding:0;
+//            margin-bottom:50px;
+//
+//            h1 {
+//
+//                text-align:center;
+//                float:none;
+//                margin-bottom:15px;
+//            }
+//
+//            .icon-container {
+//                float:none;
+//                position: absolute;
+//                left:33%;
+//            }
+//        }
+//    }
+//
+//}
+//@media screen and (min-width:501px) and (max-width:569px){
+//    .overview {
+//        header {
+//            padding:0;
+//            margin-bottom:50px;
+//
+//            h1 {
+//
+//                text-align:center;
+//                float:none;
+//                margin-bottom:15px;
+//            }
+//
+//            .icon-container {
+//                float:none;
+//                position: absolute;
+//                left:33.3%;
+//            }
+//        }
+//    }
+//}
+//@media screen and (min-width:570px) and (max-width:626px){
+//    .overview {
+//        header {
+//            padding:0;
+//            margin-bottom:50px;
+//
+//            h1 {
+//                float:left;
+//                margin-left:5%;
+//            }
+//
+//            .icon-container {
+//                float:right;
+//                margin-right:5%;
+//
+//            }
+//        }
+//    }
+//}
+//@media screen and (min-width:627px) and (max-width:720px){
+//    .overview {
+//        header {
+//            padding:0;
+//            margin-bottom:50px;
+//
+//            h1 {
+//                float:left;
+//                margin-left:7%;
+//            }
+//
+//            .icon-container {
+//                float:right;
+//                margin-right:7%;
+//
+//            }
+//        }
+//    }
+//}
+//@media screen and (min-width:720px) and (max-width:980px){
+//    .overview {
+//        header {
+//            padding:0;
+//            margin-bottom:50px;
+//
+//            h1 {
+//                float:left;
+//                margin-left:3.5%;
+//            }
+//
+//            .icon-container {
+//                float:right;
+//                margin-right:3.5%;
+//
+//            }
+//        }
+//    }
+//}
