--- a/src/styles/_step1.scss
+++ b/src/styles/_step1.scss
@@ -7,6 +7,13 @@
     header {
         text-align: center;
         margin: 0 0 $spacing2 + $spacing3;
+
+        img {
+            display: inline-block;
+            height: 40px;
+            padding-left: 5px;
+            margin-bottom: -7px;
+        }
     }
 
     .stack {
