--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -7,6 +7,7 @@
 $color-black: #333;
 $color-white: #fff;
 $color-blue: #00C8FF;
+$color-yellow: #ffd60a;
 $color-like: #66DB7A;
 $color-dislike: #FE6858;
 $color-no-cover: #FFD51C;
