--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -24,7 +24,7 @@
     background-repeat:no-repeat;
     background-position: top center;
 
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 4px rgba($color-black, 0.3);
 
     border-radius: $border-radius;
 }
