--- a/src/styles/_step2.scss
+++ b/src/styles/_step2.scss
@@ -70,9 +70,9 @@
                     width:38px;
                     height:38px;
                     padding:10px;
-                    background: $color-blue;
+                    background: rgba($color-yellow, 1);
                     box-shadow: -2px 2px 4px rgba($color-black, 0.3);
-                    border:1px solid darken($color-blue, 5);
+                    border:1px solid darken($color-yellow, 5);
                     border-radius:50%;
 
                     img {
@@ -169,8 +169,8 @@
                         float: right;
                         width: 42px;
                         height: 42px;
-                        border: 1px solid darken($color-blue, 5);
-                        background: rgba($color-blue, .4);
+                        border: 1px solid darken($color-yellow, 5);
+                        background: rgba($color-yellow, .8);
                         padding: 10px;
                         border-radius: 50%;
                         margin: -30px -30px 0;
@@ -194,41 +194,33 @@
 
                 .maincontent {
                     width: $container-w - $book-big-w - $spacing2;
-                    min-height: $book-big-h;
                     position: relative;
                     float: left;
 
                     h1 {
                         line-height: 1.8;
                         margin: -15px 0 10px;
+                        padding-right: 30px;
                     }
 
                     p {
-                        padding-bottom: $spacing2;
+                        padding-bottom: $spacing3;
                     }
 
                     .meta {
-                        border-top: 1px solid rgba($color-black, .2);
-                        padding-top: 10px;
-                        position: absolute;
-                        bottom: 0;
                         width: 100%;
 
                         strong {
                             padding-right: 10px;
                         }
-                        span:nth-child(2) {
-                            //margin-left: $spacing3;
-                        }
 
                         .author, .genre {
-                            width: 50%;
                             height: 22px;
-                            float: left;
                             display: block;
                             white-space: nowrap;
                             overflow: hidden;
                             text-overflow: ellipsis;
+                            margin-bottom: 16px;
                         }
 
                         .icon-author {
@@ -299,8 +291,8 @@
                 float: right;
                 width: 42px;
                 height: 42px;
-                border: 1px solid darken($color-blue, 5);
-                background: rgba($color-blue, 1);
+                border: 1px solid darken($color-yellow, 5);
+                background: rgba($color-yellow, 1);
                 padding: 10px;
                 border-radius: 50%;
                 margin: -50px -50px 0;
@@ -312,6 +304,10 @@
             color: $color-white;
             font-size: $paragraph;
             margin-bottom: 20px;
+        }
+        
+        p {
+            color: $color-white;
         }
 
         input {
