Some padding here, some margin there

--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -85,7 +85,7 @@
     .swipe {
         .stack {
             height: 300px;
-            margin-bottom: 60px;
+            margin-bottom: $spacing3;
 
             li {
                 margin-left: -150px;
